--- a/infrastructure/composer.json
+++ b/infrastructure/composer.json
@@ -15,6 +15,7 @@
     "illuminate/database": "^8",
     "illuminate/pagination": "^8",
     "vlucas/phpdotenv": "^5",
-    "gettext/gettext": "^5"
+    "gettext/gettext": "^5",
+    "ext-gettext": "*"
   }
 }
