feat(core): remove repository, fix small bugs, started console cli

--- a/infrastructure/.env
+++ b/infrastructure/.env
@@ -1,12 +1,14 @@
-LANG_DOMAIN="messages"
-LANG_ENCODING="UTF-8"
-LANG="pt_BR"
-
+VERSION="0.1"
 RUNNER_CLASS="\\application\\runner\\Main"
+RUNNER_CLASS_CONSOLE="\\application\\runner\\Console"
 
 BASE_DIR="/potato/"
 BASE_URL="http://127.0.0.1/potato/"
 FORCE_SSL=0
+
+LANG_DOMAIN="messages"
+LANG_ENCODING="UTF-8"
+LANG="pt_BR"
 
 DEFAULT_ROUTE="Home"
 
@@ -18,11 +20,12 @@ SMARTY_TRIMSPACE=1
 
 CACHE_SERVICE="\\infrastructure\\cache\\CacheService"
 
+DISABLE_DATABASE=1
 DATABASE_DRIVE="\\infrastructure\\core\\database\\EloquentDriver"
 DB_HOSTNAME="localhost"
-DB_DATABASE="dev_teste"
-DB_USERNAME="root"
-DB_PASSWORD=""
+DB_DATABASE="test"
+DB_USERNAME="test"
+DB_PASSWORD="test"
 DB_CHARSET="utf8"
 DB_COLLATION="utf8_unicode_ci"
 DB_PREFIX=""
