feat(cli): implement -exec command

--- a/infrastructure/composer.json
+++ b/infrastructure/composer.json
@@ -17,5 +17,8 @@
     "vlucas/phpdotenv": "^5",
     "gettext/gettext": "^5",
     "ext-gettext": "*"
+  },
+  "config": {
+    "disable-tls": true
   }
 }
